gen/TiigrikeelParser.java
// Generated from /home/madis/git/tiiger/Tiigrikeel.g4 by ANTLR 4.x
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TiigrikeelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__25=1, T__24=2, T__23=3, T__22=4, T__21=5, T__20=6, T__19=7, T__18=8, 
		T__17=9, T__16=10, T__15=11, T__14=12, T__13=13, T__12=14, T__11=15, T__10=16, 
		T__9=17, T__8=18, T__7=19, T__6=20, T__5=21, T__4=22, T__3=23, T__2=24, 
		T__1=25, T__0=26, MuutujaNimi=27, Täisarv=28, Komaga=29, Sõne=30, Tõeväärtus=31, 
		Kommentaar=32, Whitespace=33;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'\n'", "','", "'['", "'*'", "'-'", "'('", "':'", 
		"'<'", "'!='", "'<='", "'või'", "'{'", "'}'", "')'", "'+'", "'kui'", "'='", 
		"'>'", "'/'", "'=='", "'kuni'", "'>='", "'!'", "'tegevus'", "'ja'", "MuutujaNimi", 
		"Täisarv", "Komaga", "Sõne", "Tõeväärtus", "Kommentaar", "Whitespace"
	};
	public static final int
		RULE_programm = 0, RULE_lauseteJada = 1, RULE_lause = 2, RULE_kuiLause = 3, 
		RULE_kuniLause = 4, RULE_omistamine = 5, RULE_uusFunktsioon = 6, RULE_avaldis = 7, 
		RULE_tehe = 8, RULE_tehe4 = 9, RULE_tehe3 = 10, RULE_tehe2 = 11, RULE_tehe1 = 12, 
		RULE_tehe0 = 13, RULE_lausearvutus = 14, RULE_lausearvutus4 = 15, RULE_lausearvutus3 = 16, 
		RULE_lausearvutus2 = 17, RULE_lausearvutus1 = 18, RULE_lausearvutus0 = 19;
	public static final String[] ruleNames = {
		"programm", "lauseteJada", "lause", "kuiLause", "kuniLause", "omistamine", 
		"uusFunktsioon", "avaldis", "tehe", "tehe4", "tehe3", "tehe2", "tehe1", 
		"tehe0", "lausearvutus", "lausearvutus4", "lausearvutus3", "lausearvutus2", 
		"lausearvutus1", "lausearvutus0"
	};

	@Override
	public String getGrammarFileName() { return "Tiigrikeel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TiigrikeelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrammContext extends ParserRuleContext {
		public LauseteJadaContext lauseteJada(int i) {
			return getRuleContext(LauseteJadaContext.class,i);
		}
		public List<LauseteJadaContext> lauseteJada() {
			return getRuleContexts(LauseteJadaContext.class);
		}
		public ProgrammContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitProgramm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammContext programm() throws RecognitionException {
		ProgrammContext _localctx = new ProgrammContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programm);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40); lauseteJada();
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(41); match(T__24);
						}
						}
						setState(44); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__24 );
					setState(46); lauseteJada();
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__24) {
				{
				{
				setState(52); match(T__24);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LauseteJadaContext extends ParserRuleContext {
		public LauseContext lause(int i) {
			return getRuleContext(LauseContext.class,i);
		}
		public List<LauseContext> lause() {
			return getRuleContexts(LauseContext.class);
		}
		public LauseteJadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lauseteJada; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitLauseteJada(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LauseteJadaContext lauseteJada() throws RecognitionException {
		LauseteJadaContext _localctx = new LauseteJadaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lauseteJada);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58); lause();
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(59); match(T__24);
					setState(60); lause();
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LauseContext extends ParserRuleContext {
		public KuniLauseContext kuniLause() {
			return getRuleContext(KuniLauseContext.class,0);
		}
		public KuiLauseContext kuiLause() {
			return getRuleContext(KuiLauseContext.class,0);
		}
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public OmistamineContext omistamine() {
			return getRuleContext(OmistamineContext.class,0);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public UusFunktsioonContext uusFunktsioon() {
			return getRuleContext(UusFunktsioonContext.class,0);
		}
		public LauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitLause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LauseContext lause() throws RecognitionException {
		LauseContext _localctx = new LauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lause);
		try {
			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66); kuiLause();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67); kuniLause();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68); omistamine();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69); uusFunktsioon();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(70); avaldis();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(71); match(T__13);
				setState(72); lauseteJada();
				setState(73); match(T__12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KuiLauseContext extends ParserRuleContext {
		public LauseContext lause() {
			return getRuleContext(LauseContext.class,0);
		}
		public LausearvutusContext lausearvutus() {
			return getRuleContext(LausearvutusContext.class,0);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public KuiLauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kuiLause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitKuiLause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KuiLauseContext kuiLause() throws RecognitionException {
		KuiLauseContext _localctx = new KuiLauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_kuiLause);
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77); match(T__9);
				setState(78); match(T__19);
				setState(79); lausearvutus();
				setState(80); match(T__11);
				setState(81); match(T__18);
				setState(82); match(T__24);
				setState(83); lauseteJada();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); match(T__9);
				setState(86); match(T__19);
				setState(87); lausearvutus();
				setState(88); match(T__11);
				setState(89); match(T__18);
				setState(90); lause();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(92); match(T__9);
				setState(93); lausearvutus();
				setState(94); match(T__18);
				setState(95); match(T__24);
				setState(96); lauseteJada();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98); match(T__9);
				setState(99); lausearvutus();
				setState(100); match(T__18);
				setState(101); lause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KuniLauseContext extends ParserRuleContext {
		public LauseContext lause() {
			return getRuleContext(LauseContext.class,0);
		}
		public LausearvutusContext lausearvutus() {
			return getRuleContext(LausearvutusContext.class,0);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public KuniLauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kuniLause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitKuniLause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KuniLauseContext kuniLause() throws RecognitionException {
		KuniLauseContext _localctx = new KuniLauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_kuniLause);
		try {
			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); match(T__4);
				setState(106); match(T__19);
				setState(107); lausearvutus();
				setState(108); match(T__11);
				setState(109); match(T__18);
				setState(110); match(T__24);
				setState(111); lauseteJada();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113); match(T__4);
				setState(114); match(T__19);
				setState(115); lausearvutus();
				setState(116); match(T__11);
				setState(117); match(T__18);
				setState(118); lause();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120); match(T__4);
				setState(121); lausearvutus();
				setState(122); match(T__18);
				setState(123); match(T__24);
				setState(124); lauseteJada();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(126); match(T__4);
				setState(127); lausearvutus();
				setState(128); match(T__18);
				setState(129); lause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmistamineContext extends ParserRuleContext {
		public TerminalNode MuutujaNimi() { return getToken(TiigrikeelParser.MuutujaNimi, 0); }
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public OmistamineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_omistamine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitOmistamine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OmistamineContext omistamine() throws RecognitionException {
		OmistamineContext _localctx = new OmistamineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_omistamine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(MuutujaNimi);
			setState(134); match(T__8);
			setState(135); avaldis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UusFunktsioonContext extends ParserRuleContext {
		public List<TerminalNode> MuutujaNimi() { return getTokens(TiigrikeelParser.MuutujaNimi); }
		public TerminalNode MuutujaNimi(int i) {
			return getToken(TiigrikeelParser.MuutujaNimi, i);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public UusFunktsioonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uusFunktsioon; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitUusFunktsioon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UusFunktsioonContext uusFunktsioon() throws RecognitionException {
		UusFunktsioonContext _localctx = new UusFunktsioonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_uusFunktsioon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(T__1);
			setState(138); match(MuutujaNimi);
			setState(139); match(T__19);
			setState(148);
			_la = _input.LA(1);
			if (_la==MuutujaNimi) {
				{
				setState(140); match(MuutujaNimi);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__23) {
					{
					{
					setState(141); match(T__23);
					setState(142); match(MuutujaNimi);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(150); match(T__11);
			setState(151); match(T__18);
			setState(152); lauseteJada();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AvaldisContext extends ParserRuleContext {
		public LausearvutusContext lausearvutus() {
			return getRuleContext(LausearvutusContext.class,0);
		}
		public TeheContext tehe() {
			return getRuleContext(TeheContext.class,0);
		}
		public AvaldisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avaldis; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitAvaldis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AvaldisContext avaldis() throws RecognitionException {
		AvaldisContext _localctx = new AvaldisContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_avaldis);
		try {
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154); tehe();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155); lausearvutus();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TeheContext extends ParserRuleContext {
		public Tehe4Context tehe4() {
			return getRuleContext(Tehe4Context.class,0);
		}
		public TeheContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tehe; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitTehe(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TeheContext tehe() throws RecognitionException {
		TeheContext _localctx = new TeheContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tehe);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); tehe4(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tehe4Context extends ParserRuleContext {
		public Tehe4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tehe4; }
	 
		public Tehe4Context() { }
		public void copyFrom(Tehe4Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LiitmineLahutamineContext extends Tehe4Context {
		public Tehe4Context tehe4() {
			return getRuleContext(Tehe4Context.class,0);
		}
		public Tehe3Context tehe3() {
			return getRuleContext(Tehe3Context.class,0);
		}
		public LiitmineLahutamineContext(Tehe4Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitLiitmineLahutamine(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TriviaalneTehe4Context extends Tehe4Context {
		public Tehe3Context tehe3() {
			return getRuleContext(Tehe3Context.class,0);
		}
		public TriviaalneTehe4Context(Tehe4Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitTriviaalneTehe4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tehe4Context tehe4() throws RecognitionException {
		return tehe4(0);
	}

	private Tehe4Context tehe4(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Tehe4Context _localctx = new Tehe4Context(_ctx, _parentState);
		Tehe4Context _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_tehe4, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new TriviaalneTehe4Context(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(161); tehe3(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(168);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LiitmineLahutamineContext(new Tehe4Context(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_tehe4);
					setState(163);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(164);
					_la = _input.LA(1);
					if ( !(_la==T__20 || _la==T__10) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(165); tehe3(0);
					}
					} 
				}
				setState(170);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Tehe3Context extends ParserRuleContext {
		public Tehe3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tehe3; }
	 
		public Tehe3Context() { }
		public void copyFrom(Tehe3Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TriviaalneTehe3Context extends Tehe3Context {
		public Tehe2Context tehe2() {
			return getRuleContext(Tehe2Context.class,0);
		}
		public TriviaalneTehe3Context(Tehe3Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitTriviaalneTehe3(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class KorrutamineJagamineContext extends Tehe3Context {
		public Tehe2Context tehe2() {
			return getRuleContext(Tehe2Context.class,0);
		}
		public Tehe3Context tehe3() {
			return getRuleContext(Tehe3Context.class,0);
		}
		public KorrutamineJagamineContext(Tehe3Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitKorrutamineJagamine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tehe3Context tehe3() throws RecognitionException {
		return tehe3(0);
	}

	private Tehe3Context tehe3(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Tehe3Context _localctx = new Tehe3Context(_ctx, _parentState);
		Tehe3Context _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_tehe3, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new TriviaalneTehe3Context(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(172); tehe2();
			}
			_ctx.stop = _input.LT(-1);
			setState(179);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new KorrutamineJagamineContext(new Tehe3Context(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_tehe3);
					setState(174);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(175);
					_la = _input.LA(1);
					if ( !(_la==T__21 || _la==T__6) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(176); tehe2();
					}
					} 
				}
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Tehe2Context extends ParserRuleContext {
		public Tehe2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tehe2; }
	 
		public Tehe2Context() { }
		public void copyFrom(Tehe2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TriviaalneTehe2Context extends Tehe2Context {
		public Tehe1Context tehe1() {
			return getRuleContext(Tehe1Context.class,0);
		}
		public TriviaalneTehe2Context(Tehe2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitTriviaalneTehe2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaarneMiinusContext extends Tehe2Context {
		public Tehe2Context tehe2() {
			return getRuleContext(Tehe2Context.class,0);
		}
		public UnaarneMiinusContext(Tehe2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TiigrikeelVisitor ) return ((TiigrikeelVisitor<? extends T>)visitor).visitUnaarneMiinus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tehe2Context tehe2() throws RecognitionException {
		Tehe2Context _localctx = new Tehe2Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_tehe2);
		try {
			setState(185);
			switch (_input.LA(1)) {
			case T__20:
				_localctx = new UnaarneMiinusContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(182); match(T__20);
				setState(183); tehe2();
				}
				break;
			case T__19:
			case MuutujaNimi:
			case Täisarv:
			case Komaga:
			case Sõne:
			case Tõeväärtus:
				_localctx = new TriviaalneTehe2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(184); tehe1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
